[package]
name = "tito"
version = "0.1.0"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
clap = "2.33.3"
tempdir = "0.3.7"
log = "0.4.11"
lazy_static = "1.4.0"
chrono = "0.4.19"
wait-timeout = "0.1.5"